# reno-structured-output

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-to-pypi.yml  run-nox-sessions.yml
releasenotes/notes/: a-new-note-9f81cd50f0059b25.yaml  another-new-note-cfd912555741f2e6.yaml  identify-pre-release-notes-650461d0ae98a639.yaml  pretty-printing-a746bfde31f18318.yaml  the-first-69e12675bb62ecb4.yaml  yet-another-new-note-d7ee096f6601b989.yaml
src/reno_structured_output/: __init__.py  cli.py  collect_notes.py
tests/: test_collecting_release_notes.py  test_versioning.py
